2001-08-15  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/oaidl.h (tagVARIANT): Mark anonymous structs and unions
	 as 	__extension__.
	(tagTYPEDESC): Ditto.
	(_wireBRECORD): Add structure definition.
	(_wireSAFEARR_BRECORD): Ditto.
	(_wireSAFEARR_HAVEIID): Ditto.
	(_wireSAFEARRAY_UNION.u): Add fields SAFEARR_BRECORD RecordStr,
	SAFEARR_HAVEIID HaveIidStr.
	(tagVariant): Add fields _VARIANT_BOOL bool,*pbool. 
	(_wireVARIANT): Change field parray to type wirePSAFEARRAY,
	pparray to wirePSAFEARRAY*.
	(_wireVARIANT): Add field wireBRECORD brecVal.
	(wireVARIANT): Change typedef to struct _wireVariant*.
	(IRecordInfo): Add interface definition.
	(LPRECORDINFO): Add typedef for IRecordInfo*.
	(IID_IRecordInfo): Add forward decalaration.

2001-08-15  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/lmcons.h: Guard CNLEN and UNCLEN against prior definition.
	* include/nddeapi.h: Likewise.

2001-08-10  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/test.c (Win32_Winsock): Replace with __USE_W32_SOCKETS.
	Add more includes of w32api headers.

2001-08-10  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h (GetCurrentFiber): Change __inline to __inline__.
	Swap asm code with that of GetFiberData.
	(GetFiberData): Ditto.
	* lib/kernel32.c: New file, containing library versions of
	GetCurrentFiber and GetFiberData.
	* lib/makefile.in: Add kernel32.o as static object to libkernal32.a.

2001-08-08  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winuser.h (GET_WHEEL_DELTA_WPARAM): Add macro.
	Thanks to: Harold Hunt <Harold@compasstechnologies.com>.

2001-08-08  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/oleaut32.def: Regenerate.

2001-08-04  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wtypes.h (DECIMAL_SETZERO): Correct typo.

2001-08-02  Danny Smith  <dannysmith@users.sourceforge.net>

	Apply Dmitry Bely  <dbely@mail.ru> patch 437834 (with additions).